--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,44 +13,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_credentials()->dict[str, str]:\n",
-    "    with open(\"credentials.json\") as cfile:\n",
+    "    with open(\"credentials/metadata.json\") as cfile:\n",
     "        credentials = loads(cfile.read())\n",
     "    return credentials"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "sat_credentials = get_credentials()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prod_api_url = \"https://api.satws.com\"\n",
-    "test_api_url = \"https://api.sandbox.satws.com\"\n",
-    "path_type = \"credetials\"\n",
-    "prod_api_key = \"3a5faf1c2155c2ded9ca82aafa1bfa49\"\n",
-    "test_api_key = \"4e42092fd7c079c612f2942e8d1d15ad\"\n",
-    "id_client = \"9852142f-6a9e-4313-8eb9-20110fe33101\"\n",
-    "\n",
-    "headers = {\n",
-    "    \"X-API-Key\": prod_api_url,\n",
-    "    #\"Content-Type\": \"application/json\"\n",
-    "}\n",
-    "\n",
-    "data = sat_credentials[\"rolando\"]\n"
    ]
   },
   {
@@ -123,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,22 +126,29 @@
     "\n",
     "def get_all_credentials(env: str = \"prod\") -> DataFrame:\n",
     "    path_type = \"credentials\"\n",
-    "    response = requests.get(f\"{API_URLS[env]}/{path_type}\", headers=headers)\n",
-    "    parsed_response = loads(response.text)\n",
-    "    return DataFrame(parsed_response[\"hydra:member\"])\n",
+    "    http_response = requests.get(f\"{API_URLS[env]}/{path_type}\", headers=headers)\n",
+    "    parsed_content = loads(http_response.text)\n",
+    "    return DataFrame(parsed_content[\"hydra:member\"])\n",
     "\n",
     "\n",
-    "def get_credentials(_id=\"credentials\") -> DataFrame:\n",
+    "def get_credential(_id=\"credentials\") -> DataFrame:\n",
     "    path_type = \"credentials\"\n",
     "    response = requests.get(f\"{API_URLS}/{path_type}\", headers=headers)\n",
     "    print(response.text)\n",
     "    parsed_response = loads(response.text)\n",
-    "    return DataFrame(parsed_response[\"hydra:member\"])\n"
+    "    return DataFrame(parsed_response[\"hydra:member\"])\n",
+    "\n",
+    "def get_credential(_id=\"credentials\") -> DataFrame:\n",
+    "    path_type = \"credentials\"\n",
+    "    response = requests.get(f\"{API_URLS}/{path_type}\", headers=headers)\n",
+    "    print(response.text)\n",
+    "    parsed_response = loads(response.text)\n",
+    "    return DataFrame(parsed_response[\"hydra:member\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +271,7 @@
        "4  2023-01-27 01:04:48  2023-01-27 01:04:58  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('sat-cracker-jAOW96i1')",
+   "display_name": "pyspark-env",
    "language": "python",
    "name": "python3"
   },
@@ -338,12 +333,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.4"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8a527f3e53f27aa19f16eec68c81d09ddc2f395c70e448fb8f48d8808e2c1a5b"
+    "hash": "20d0f1516e0e13576d2e36346593aeb6f153028b348210e28c26c4bfc719042b"
    }
   }
  },
