--- a/test.ipynb
+++ b/test.ipynb
@@ -2,20 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from json import loads\n",
-    "from typing import Union\n",
-    "from requests import get, post\n",
-    "from datetime import datetime as dt\n",
-    "from pandas import DataFrame, to_datetime"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +69,7 @@
     "        \"<\": \"[lt]\",\n",
     "        \">=\": \"[gte]\",\n",
     "        \">\": \"[gt]\",\n",
-    "        \"><\": \"[between]\",\n",
+    "        \"between\": \"[between]\",\n",
     "    }\n",
     "    if isinstance(value, (tuple, list)):\n",
     "        if _is_valid_date(value[1]):\n",
@@ -83,7 +77,7 @@
     "            parsed_value = value[1]\n",
     "        else:\n",
     "            suffix = logic_map_number[value[0]]\n",
-    "            parsed_value = f\"{value[1]}..{value[2]}\" if value[0] == \"><\" else value[1]\n",
+    "            parsed_value = f\"{value[1]}..{value[2]}\" if value[0] == \"between\" else value[1]\n",
     "    else:\n",
     "        suffix = \"\"\n",
     "        parsed_value = value\n",
@@ -96,9 +90,8 @@
     "    return \"?\" + \"&\".join(f\"{key}{_parse_arg(value)}\" for key, value in args.items())\n",
     "\n",
     "def get_all_credentials(env: str = \"prod\") -> DataFrame:\n",
-    "    path_type = \"credentials\"\n",
     "    http_request = {\n",
-    "        \"url\": f\"{API_URLS[env]}/{path_type}\",\n",
+    "        \"url\": f\"{API_URLS[env]}/credentials\",\n",
     "        \"headers\": {\n",
     "            \"X-API-Key\": API_KEYS[env],\n",
     "        }\n",
@@ -109,9 +102,8 @@
     "\n",
     "\n",
     "def get_credential(_id=\"credentials\", env: str = \"prod\") -> DataFrame:\n",
-    "    path_type = \"credentials\"\n",
     "    http_request = {\n",
-    "        \"url\": f\"{API_URLS[env]}/{path_type}\",\n",
+    "        \"url\": f\"{API_URLS[env]}/credentialss\",\n",
     "        \"headers\": {\n",
     "            \"X-API-Key\": API_KEYS[env],\n",
     "        }\n",
@@ -121,15 +113,26 @@
     "    return DataFrame(parsed_response[\"hydra:member\"])\n",
     "\n",
     "\n",
-    "def get_invoices(rfc: str, env: str = \"prod\", **query_args) -> DataFrame:\n",
+    "def get_invoices(rfc: str, env: str = \"prod\", **query_args) -> Union[DataFrame, None]:\n",
+    "    parsed_query_args = _parse_args(**query_args)\n",
     "    http_request = {\n",
-    "        \"url\": f\"{API_URLS[env]}/taxpayers/{rfc}/invoices{_parse_args(**query_args)}\",\n",
+    "        \"url\": f\"{API_URLS[env]}/taxpayers/{rfc}/invoices{parsed_query_args}\",\n",
     "        \"headers\": {\n",
     "            \"X-API-Key\": API_KEYS[env],\n",
     "        }\n",
     "    }\n",
     "    response = get(**http_request)\n",
-    "    parsed_response = loads(response.text)\n",
+    "\n",
+    "    if (response.status_code - 200) >= 100:\n",
+    "        raise ConnectionError\n",
+    "        \n",
+    "    parsed_response = response.json()\n",
+    "    \n",
+    "    if not parsed_response:\n",
+    "        return None\n",
+    "    elif parsed_response['hydra:totalItems'] == 0:\n",
+    "        return None\n",
+    "    \n",
     "    return DataFrame(parsed_response[\"hydra:member\"]).drop('@id', axis=1)\n",
     "\n",
     "\n",
@@ -143,39 +146,22 @@
     "    }\n",
     "    response = get(**http_request)\n",
     "\n",
-    "    if format == \"json\":\n",
-    "        with open(f\"{invoice_id}.json\", \"wb\") as file:\n",
-    "            file.write(response.content)\n",
-    "    elif format == \"xml\":\n",
-    "        with open(f\"{invoice_id}.xml\", \"w\") as file:\n",
-    "            file.write(response.text)\n",
-    "    else: # pdf\n",
-    "        with open(f\"{invoice_id}.pdf\", \"wb\") as file:\n",
-    "            file.write(response.content)"
+    "    with open(f\"{invoice_id}.{format}\", \"wb\") as file:\n",
+    "        file.write(response.content)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "r = retrieve_cfdi(\"985213d7-ee6d-4ff7-9786-66a046b8adac\", \"json\")\n"
+    "retrieve_cfdi(\"985213d7-ee6d-4ff7-9786-66a046b8adac\", \"json\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(\"a.pdf\", \"wb\") as file:\n",
-    "    file.write(r)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,134 +169,15 @@
     "    rfc=\"RIGC6106151I7\",\n",
     "    type=\"I\", \n",
     "    version=3.3,\n",
+    "    paymentMethod=\"03\",\n",
     "    issuedAt=(\">\", \"2023-01-19T23:37:41Z\"),\n",
-    "    #tax=(\"><\", 10, 12.1)\n",
+    "    #tax=(\"between\", 10, 12.1)\n",
     "    )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "unhashable type: 'dict'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[142], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m unique_dicts \u001b[39m=\u001b[39m \u001b[39mlist\u001b[39m(\u001b[39mset\u001b[39;49m(\u001b[39mtuple\u001b[39;49m(d\u001b[39m.\u001b[39;49mitems()) \u001b[39mfor\u001b[39;49;00m d \u001b[39min\u001b[39;49;00m df_invoices[\u001b[39m\"\u001b[39;49m\u001b[39mitems\u001b[39;49m\u001b[39m\"\u001b[39;49m]\u001b[39m.\u001b[39;49mto_list()[\u001b[39m0\u001b[39;49m]))\n\u001b[0;32m      2\u001b[0m unique_dicts \u001b[39m=\u001b[39m [\u001b[39mdict\u001b[39m(d) \u001b[39mfor\u001b[39;00m d \u001b[39min\u001b[39;00m unique_dicts]\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'dict'"
-     ]
-    }
-   ],
-   "source": [
-    "unique_dicts = list(set(tuple(d.items()) for d in df_invoices[\"items\"].to_list()[0]))\n",
-    "unique_dicts = [dict(d) for d in unique_dicts]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 165,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     None\n",
-       "1     None\n",
-       "2     None\n",
-       "3     None\n",
-       "4        A\n",
-       "5        A\n",
-       "6        A\n",
-       "7     None\n",
-       "8     None\n",
-       "9        A\n",
-       "10       A\n",
-       "11       A\n",
-       "12       A\n",
-       "13       A\n",
-       "14       A\n",
-       "15       A\n",
-       "16       A\n",
-       "17       A\n",
-       "18    None\n",
-       "19       A\n",
-       "Name: reference, dtype: object"
-      ]
-     },
-     "execution_count": 165,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_invoices[\"reference\"]\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 141,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a'}"
-      ]
-     },
-     "execution_count": 141,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "set(tuple({\"a\": 1}))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 153,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_invoices[\"items\"].to_list().__len__()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 154,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_items= DataFrame(df_invoices[\"items\"].to_list())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_it"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -382,167 +249,43 @@
        "      <td>True</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Invoice</td>\n",
-       "      <td>985213d7-800c-424a-901a-fe7fa7a2e1b2</td>\n",
-       "      <td>08f1efe3-7fff-41e7-84f7-3ca660801ef9</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>I</td>\n",
-       "      <td>P01</td>\n",
-       "      <td>PUE</td>\n",
-       "      <td>03</td>\n",
-       "      <td>06600</td>\n",
-       "      <td>{'taxRegime': 601, 'rfc': 'BBA830831LJ2', 'nam...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>2023-01-27 01:27:56</td>\n",
-       "      <td>2023-01-28 06:11:48</td>\n",
-       "      <td>[{'identificationNumber': None, 'productIdenti...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Invoice</td>\n",
-       "      <td>985213db-eccf-4621-8bd9-5dab7de6338b</td>\n",
-       "      <td>1d4fdefe-269f-4491-affa-ec5e6cee7f00</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>I</td>\n",
-       "      <td>P01</td>\n",
-       "      <td>PUE</td>\n",
-       "      <td>03</td>\n",
-       "      <td>06600</td>\n",
-       "      <td>{'taxRegime': 601, 'rfc': 'BBA830831LJ2', 'nam...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>2023-01-27 01:27:59</td>\n",
-       "      <td>2023-01-27 01:28:00</td>\n",
-       "      <td>[{'identificationNumber': None, 'productIdenti...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Invoice</td>\n",
-       "      <td>985213da-d8fe-4350-9225-321d023b904c</td>\n",
-       "      <td>ea0c4765-131f-4499-9334-b35d5eabf342</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>I</td>\n",
-       "      <td>P01</td>\n",
-       "      <td>PUE</td>\n",
-       "      <td>03</td>\n",
-       "      <td>06600</td>\n",
-       "      <td>{'taxRegime': 601, 'rfc': 'BBA830831LJ2', 'nam...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>2023-01-27 01:27:59</td>\n",
-       "      <td>2023-01-27 01:27:59</td>\n",
-       "      <td>[{'identificationNumber': None, 'productIdenti...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Invoice</td>\n",
-       "      <td>985213f1-8448-44cf-adea-f475451eb47b</td>\n",
-       "      <td>4801c00e-0ab0-4ccb-9cac-1f16255618e3</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>I</td>\n",
-       "      <td>G03</td>\n",
-       "      <td>PUE</td>\n",
-       "      <td>02</td>\n",
-       "      <td>66050</td>\n",
-       "      <td>{'taxRegime': 612, 'rfc': 'SAMS990714DN1', 'na...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>A</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>None</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>[]</td>\n",
-       "      <td>2023-01-27 01:28:13</td>\n",
-       "      <td>2023-01-28 06:11:37</td>\n",
-       "      <td>[{'identificationNumber': None, 'productIdenti...</td>\n",
-       "      <td>True</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 47 columns</p>\n",
+       "<p>1 rows × 47 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "     @type                                    id  \\\n",
        "0  Invoice  985213d7-ee6d-4ff7-9786-66a046b8adac   \n",
-       "1  Invoice  985213d7-800c-424a-901a-fe7fa7a2e1b2   \n",
-       "2  Invoice  985213db-eccf-4621-8bd9-5dab7de6338b   \n",
-       "3  Invoice  985213da-d8fe-4350-9225-321d023b904c   \n",
-       "4  Invoice  985213f1-8448-44cf-adea-f475451eb47b   \n",
        "\n",
        "                                   uuid  version type usage paymentType  \\\n",
        "0  1891b321-c2e6-4974-a80a-c9dd5d7273b9      3.3    I   P01         PUE   \n",
-       "1  08f1efe3-7fff-41e7-84f7-3ca660801ef9      3.3    I   P01         PUE   \n",
-       "2  1d4fdefe-269f-4491-affa-ec5e6cee7f00      3.3    I   P01         PUE   \n",
-       "3  ea0c4765-131f-4499-9334-b35d5eabf342      3.3    I   P01         PUE   \n",
-       "4  4801c00e-0ab0-4ccb-9cac-1f16255618e3      3.3    I   G03         PUE   \n",
        "\n",
        "  paymentMethod placeOfIssue  \\\n",
        "0            03        06600   \n",
-       "1            03        06600   \n",
-       "2            03        06600   \n",
-       "3            03        06600   \n",
-       "4            02        66050   \n",
        "\n",
        "                                              issuer  ...  reference  \\\n",
        "0  {'taxRegime': 601, 'rfc': 'BBA830831LJ2', 'nam...  ...       None   \n",
-       "1  {'taxRegime': 601, 'rfc': 'BBA830831LJ2', 'nam...  ...       None   \n",
-       "2  {'taxRegime': 601, 'rfc': 'BBA830831LJ2', 'nam...  ...       None   \n",
-       "3  {'taxRegime': 601, 'rfc': 'BBA830831LJ2', 'nam...  ...       None   \n",
-       "4  {'taxRegime': 612, 'rfc': 'SAMS990714DN1', 'na...  ...          A   \n",
        "\n",
        "  relations  creditedAmount appliedCreditNotes  issuedCreditNotes  \\\n",
        "0        []            None                 []                 []   \n",
-       "1        []            None                 []                 []   \n",
-       "2        []            None                 []                 []   \n",
-       "3        []            None                 []                 []   \n",
-       "4        []            None                 []                 []   \n",
        "\n",
        "             createdAt            updatedAt  \\\n",
        "0  2023-01-27 01:27:57  2023-01-28 06:11:48   \n",
-       "1  2023-01-27 01:27:56  2023-01-28 06:11:48   \n",
-       "2  2023-01-27 01:27:59  2023-01-27 01:28:00   \n",
-       "3  2023-01-27 01:27:59  2023-01-27 01:27:59   \n",
-       "4  2023-01-27 01:28:13  2023-01-28 06:11:37   \n",
        "\n",
        "                                               items   xml   pdf  \n",
        "0  [{'identificationNumber': None, 'productIdenti...  True  True  \n",
-       "1  [{'identificationNumber': None, 'productIdenti...  True  True  \n",
-       "2  [{'identificationNumber': None, 'productIdenti...  True  True  \n",
-       "3  [{'identificationNumber': None, 'productIdenti...  True  True  \n",
-       "4  [{'identificationNumber': None, 'productIdenti...  True  True  \n",
        "\n",
-       "[5 rows x 47 columns]"
+       "[1 rows x 47 columns]"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_invoices.head()"
+    "df_invoices"
    ]
   },
   {
@@ -961,22 +704,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "id_ = \"9852142f-6a9e-4313-8eb9-20110fe33101\"\n",
-    "id_ = \"MIGO010729SX9\"\n",
-    "http_request = {\n",
-    "    \"url\": f\"https://api.satws.com/taxpayers/{id_}/invoices\",\n",
-    "    \"headers\": {\n",
-    "        \"X-API-Key\": API_KEYS[\"prod\"],\n",
-    "    }\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [
@@ -1056,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
